add style for promo, strategies and contact-us

--- a/src/sass/base/_buttons.scss
+++ b/src/sass/base/_buttons.scss
@@ -1,32 +1,38 @@
 .button {
+  @extend %font-primary;
   padding: 11px 25px 13px;
-  font-family: "Open Sans", Verdana, sans-serif;
   font-weight: 600;
   font-size: 1.6rem;
   line-height: 2.2rem;
   border-radius: 4px;
   cursor: pointer;
   transition: all .3s;
+  &_bordered {
+    background: $color-light;
+    border: 1px solid $color-hovered;
+    &:hover {
+      background: $color-hovered;
+      border-color: $color-hovered;
+    }
+  }
+  &_colored {
+    background: $color-primary;
+    color: $color-light;
+    border: 1px solid $color-primary;
+    &:hover {
+      background: $color-additional;
+      border-color: $color-additional;
+    }
+  }
 }
 
-.button_colored {
-  background: $color-primary;
-  color: $color-light;
-  border: 1px solid $color-primary;
-  
+.link-button {
+  display: inline-flex;
+  align-items: center;
+  color: $color-primary;
+  @extend %font-add;
 }
 
-.button_bordered {
-  background: $color-light;
-  border: 1px solid $color-hovered;
-}
-
-.button_colored:hover {
-  background: $color-additional;
-  border-color: $color-additional;
-}
-
-.button_bordered:hover {
-  background: $color-hovered;
-  border-color: $color-hovered;
+.link-button__text {
+  margin-left: 9px;
 }
