--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,6 @@
+@import "base/normalize";
+
+// Abstract
 @import "abstract/constants";
 @import "abstract/mixins";
 @import "abstract/placeholders";
@@ -6,11 +9,17 @@
 @import "base/base";
 @import "base/buttons";
 @import "base/logo";
+@import "base/icons";
+@import "base/tags";
 
 // Layouts
 @import "layouts/wrapper";
 @import "layouts/header";
+@import "layouts/columns";
 
 // Components
 @import "components/contact-us";
 @import "components/promo";
+@import "components/navigation";
+@import "components/tools";
+@import "components/strategies";
