--- a/src/sass/abstract/_placeholders.scss
+++ b/src/sass/abstract/_placeholders.scss
@@ -1,3 +1,11 @@
 %transition {
   transition: all .3s ease-out;
 }
+
+%font-primary {
+  font-family: 'Open Sens', Verdana, sans-serif;
+}
+
+%font-add {
+  font-family: 'Poppins', Verdana, sans-serif;
+}
