--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -3,42 +3,32 @@ html {
 }
 
 body {
-  font-size: 1.6rem;
-  font-family: 'Open Sens', Verdana, sans-serif;
+  @extend %font-primary;
+  @include font(1.6rem, 2.6rem, normal);
 }
 
 h1 {
-  font-family: 'Poppins', Verdana, sans-serif;
-  font-size: 44px;
-  font-weight: bold;
-  font-style: normal;
-  line-height: 54px;
+  @extend %font-add;
+  @include font(4.4rem, 5.4rem, bold);
 }
 
 h2 {
-  font-size: 34px;
-  font-weight: bold;
-  font-style: normal;
-  line-height: 46px;
+  @include font(3.4rem, 4.6rem, bold);
 }
 
 h3 {
-  font-size: 24px;
-  font-weight: bold;
-  font-style: normal;
-  line-height: 34px;
+  @include font(2.4rem, 3.4rem, bold);
 }
 
 h4 {
-  font-size: 22px;
-  font-weight: 600;
-  font-style: normal;
-  line-height: 30px;
+  @include font(2.2rem, 3.0rem, 600);
 }
 
 h5 {
-  font-size: 16px;
-  font-weight: bold;
-  font-style: normal;
-  line-height: 26px;
+  @include font(1.6rem, 2.6rem, bold);
+}
+
+.block-shadowed {
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
 }
