add style for about-us, contact-us and footer

--- a/src/sass/base/_icons.scss
+++ b/src/sass/base/_icons.scss
@@ -53,3 +53,28 @@
   width: 15px;
   height: 17px;
 }
+
+.icon-round {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  &_white {
+      background-color: $color-light;
+  }
+}
+
+.ico_phone {
+  background-image: url("../img/icons/phone.svg");
+  width: 13px;
+  height: 13px;
+}
+
+.ico_letter {
+  background-image: url("../img/icons/letter.svg");
+  width: 11px;
+  height: 8px;
+}
+
