--- a/src/sass/abstract/_mixins.scss
+++ b/src/sass/abstract/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin font ($size, $height, $weight, $style: normal) {
+@mixin font ($size, $height: $size, $weight, $style: normal) {
   font-size: $size;
   font-style: $style;
   font-weight: $weight;
