--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,6 +16,7 @@
 @import "layouts/wrapper";
 @import "layouts/header";
 @import "layouts/columns";
+@import "layouts/footer";
 
 // Components
 @import "components/contact-us";
@@ -23,3 +24,4 @@
 @import "components/navigation";
 @import "components/tools";
 @import "components/strategies";
+@import "components/about-us";
