--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -10,18 +10,30 @@ body {
 h1 {
   @extend %font-add;
   @include font(4.4rem, 5.4rem, bold);
+  @include media-mobile {
+    @include font(3.2rem, 4.2rem, bold);
+  }
 }
 
 h2 {
   @include font(3.4rem, 4.6rem, bold);
+  @include media-mobile {
+    @include font(2.4rem, 3.3rem, bold);
+  }
 }
 
 h3 {
   @include font(2.4rem, 3.4rem, bold);
+  @include media-mobile {
+    @include font(2.1rem, 3.1rem, bold);
+  }
 }
 
 h4 {
   @include font(2.2rem, 3.0rem, 600);
+  @include media-tablet {
+    @include font(2.0rem, 3.0rem, 600);
+  }
 }
 
 h5 {
