--- a/src/sass/components/_contact-us.scss
+++ b/src/sass/components/_contact-us.scss
@@ -1,6 +1,15 @@
 .contact-us {
   background: $color-background;
-  padding: 62px 82px;
+  padding: 62px 0;
+  @include media-tablet {
+    text-align: center;
+  }
+}
+
+.contact-us-container {
+  @include media-tablet {
+    flex-direction: column;
+  }
 }
 
 .contact-us__title {
@@ -9,6 +18,10 @@
 
 .contact-us__content {
   max-width: 520px;
+  @include media-tablet {
+    max-width: 100%;
+    margin-bottom: 52px;
+  }
 }
 
 .contact-us__text {
@@ -29,7 +42,10 @@
     a {
         text-decoration: underline;
     }
-}
+  }
+  @include media-tablet {
+    justify-content: center;
+  }
 }
 
 .contact-us__form {
@@ -52,10 +68,20 @@
 
 .contact-us__line {
   margin-bottom: 19px;
+  @include media-mobile {
+    flex-direction: column;
+    margin-bottom: 0;
+    >* {
+      margin-bottom: 19px;
+    }
+  }
 }
 
 .contact-us__button {
   >* {
     min-width: 117px;
+  }
+  @include media-mobile {
+    margin-top: 24px;
   }
 }
