--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -6,10 +6,16 @@
 
 .navigation__link {
   list-style: none;
-  padding: 0 10px;
+  padding: 0 15px;
   cursor: pointer;
   @extend %transition;
   &:hover {
     color: $color-primary;
+  }
+}
+
+.header__navigation {
+  @include media-tablet {
+    display: none;
   }
 }
