add some styles and js

--- a/src/sass/base/_buttons.scss
+++ b/src/sass/base/_buttons.scss
@@ -1,15 +1,14 @@
 .button {
-  @extend %font-primary;
+  @extend %font-prim;
   padding: 11px 25px 13px;
-  font-weight: 600;
-  font-size: 1.6rem;
-  line-height: 2.2rem;
+  @include font ($size: 1.6rem, $height: 2.2rem, $weight: 600, $style: normal);
   border-radius: 4px;
   cursor: pointer;
-  transition: all .3s;
+  @extend %transition;
   &_bordered {
     background: $color-light;
-    border: 1px solid $color-hovered;
+    border: 1px solid $color-border;
+    color: $color-text;
     &:hover {
       background: $color-hovered;
       border-color: $color-hovered;
@@ -27,10 +26,17 @@
 }
 
 .link-button {
-  display: inline-flex;
-  align-items: center;
   color: $color-primary;
   @extend %font-add;
+  display: inline-flex;
+  align-items: center;
+  transition: .3s;
+  &:hover {
+    color: $color-red;
+    .ico_play {
+      background-image: url("../img/icons/play-hover.svg");
+    }
+  }
 }
 
 .link-button__text {
