--- a/src/sass/components/_promo.scss
+++ b/src/sass/components/_promo.scss
@@ -26,19 +26,6 @@
   margin: 0 0 30px;
 }
 
-.promo__text {
-  max-width: 487px;
-  margin: 0 0 45px;
-  @extend %font-add;
-  @include font($size: 1.8rem, $height: 2.8rem, $weight: normal);
-  @include media-tablet {
-    width: 380px;
-  }
-  @include media-mobile {
-    width: auto;
-  }
-}
-
 .promo__buttons {
   display: flex;
   align-items: center;
@@ -51,12 +38,25 @@
   @include media-mobile {
     flex-direction: column;
     >* {
-      margin-right: 0px;
+      margin-right: 0;
       margin-bottom: 26px;
       &:last-child {
         margin-bottom: 0;
       }
     }
+  }
+}
+
+.promo__text {
+  max-width: 487px;
+  margin: 0 0 45px;
+  @extend %font-add;
+  @include font($size: 1.8rem, $height: 2.8rem, $weight: normal);
+  @include media-tablet {
+    width: 380px;
+  }
+  @include media-mobile {
+    width: auto;
   }
 }
 
