--- a/src/sass/components/_strategies.scss
+++ b/src/sass/components/_strategies.scss
@@ -20,15 +20,7 @@
   }
 }
 
-.strategy {
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  @include media-tablet {
-    overflow: hidden;
-  }
-}
-
+//Strategy
 .strategy-wrapper {
   >* {
     margin-bottom: 30px;
@@ -38,6 +30,20 @@
     @include media-mobile {
       flex-basis: 100%;
     }
+  }
+}
+
+.strategy {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  &_hidden {
+    display: none;
+  }
+  @include media-tablet {
+    overflow: hidden;
+    padding-top: 200px;
   }
 }
 
@@ -52,4 +58,33 @@
   margin: 0 0 29px;
   text-align: left;
   flex-grow: 1;
+}
+
+.strategy__image {
+  @include media-tablet {
+    position: absolute;
+    top: 0;
+  }
+}
+
+.article-modal__content {
+  .strategy__image {
+    width: 100%;
+    @include media-tablet {
+      position: static;
+    }
+  }
+
+  .strategy__date {
+    @include font ($size: 1.3rem, $weight: normal);
+    margin: 0 0 5px;
+  }
+
+  .strategy__name {
+    margin-bottom: 10px;
+  }
+
+  .strategy__text {
+    margin: 0 0 12px;
+  }
 }
