--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -3,41 +3,41 @@ html {
 }
 
 body {
-  @extend %font-primary;
-  @include font(1.6rem, 2.6rem, normal);
+  @extend %font-prim;
+  @include font($size: 1.6rem, $height: 2.6rem, $weight: normal);
 }
 
 h1 {
   @extend %font-add;
-  @include font(4.4rem, 5.4rem, bold);
+  @include font($height: 5.4rem, $size: 4.4rem);
   @include media-mobile {
-    @include font(3.2rem, 4.2rem, bold);
+    @include font($height: 4.2rem, $size: 3.2rem);
   }
 }
 
 h2 {
-  @include font(3.4rem, 4.6rem, bold);
+  @include font($size: 3.4rem, $height: 4.6rem);
   @include media-mobile {
-    @include font(2.4rem, 3.3rem, bold);
+    @include font($height: 3.3rem, $size: 2.4rem);
   }
 }
 
 h3 {
-  @include font(2.4rem, 3.4rem, bold);
+  @include font($size: 2.4rem, $height: 3.4rem);
   @include media-mobile {
-    @include font(2.1rem, 3.1rem, bold);
+    @include font($height: 3.1rem, $size: 2.1rem);
   }
 }
 
 h4 {
-  @include font(2.2rem, 3.0rem, 600);
+  @include font($size: 2.2rem, $height: 3.0rem, $weight: 600);
   @include media-tablet {
-    @include font(2.0rem, 3.0rem, 600);
+    @include font($height: 3.0rem, $size: 2.0rem);
   }
 }
 
 h5 {
-  @include font(1.6rem, 2.6rem, bold);
+  @include font($size: 1.6rem, $height: 2.6rem);
 }
 
 .block-shadowed {
