--- a/src/sass/base/_hamburger.scss
+++ b/src/sass/base/_hamburger.scss
@@ -2,10 +2,10 @@
   content: "";
   display: inline-block;
   position: absolute;
-  background: $color-hamburger;
+  background-color: $color-hamburger;
   border-radius: 5px;
-  height: 3px;
   width: 100%;
+  height: 3px;
 }
 
 .hamburger {
@@ -13,7 +13,6 @@
   position: relative;
   width: 31px;
   height: 25px;
-  margin-right: 37px;
   @include media-tablet {
     display: inline-block;
   }
@@ -31,6 +30,6 @@
 
 .hamburger__line {
   @extend %hamburger-line;
-  top: calc(50% - 1.5px);
+  top: calc( 50% - 1.5px );
   left: 0;
 }
