--- a/src/sass/base/_icons.scss
+++ b/src/sass/base/_icons.scss
@@ -4,54 +4,24 @@
 }
 
 .icon-square {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
   width: 50px;
   height: 50px;
   border-radius: 19px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   &_yellow {
     background-color: $color-yellow;
   }
   &_red {
     background-color: $color-red;
   }
-  &_violet {
-    background-color: $color-violet;
-  }
   &_blue {
     background-color: $color-blue;
   }
-}
-
-.ico_play {
-  background-image: url('../img/icons/play.svg');
-  width: 18px;
-  height: 19px;
-}
-
-.ico_arrow {
-  background-image: url('../img/icons/arrow.svg');
-  width: 12px;
-  height: 17px;
-}
-
-.ico_snake {
-  background-image: url('../img/icons/snake.svg');
-  width: 18px;
-  height: 14px;
-}
-
-.ico_heart {
-  background-image: url('../img/icons/heart.svg');
-  width: 17px;
-  height: 15px;
-}
-
-.ico_clock {
-  background-image: url('../img/icons/clock.svg');
-  width: 15px;
-  height: 17px;
+  &_violet {
+    background-color: $color-violet;
+  }
 }
 
 .icon-round {
@@ -62,8 +32,38 @@
   align-items: center;
   justify-content: center;
   &_white {
-      background-color: $color-light;
+    background-color: $color-light;
   }
+}
+
+.ico_play {
+  background-image: url("../img/icons/play.svg");
+  width: 18px;
+  height: 19px;
+}
+
+.ico_arrow {
+  background-image: url("../img/icons/arrow.svg");
+  width: 12px;
+  height: 17px;
+}
+
+.ico_snake {
+  background-image: url("../img/icons/snake.svg");
+  width: 18px;
+  height: 14px;
+}
+
+.ico_heart {
+  background-image: url("../img/icons/heart.svg");
+  width: 17px;
+  height: 15px;
+}
+
+.ico_clock {
+  background-image: url("../img/icons/clock.svg");
+  width: 15px;
+  height: 17px;
 }
 
 .ico_phone {
@@ -77,4 +77,3 @@
   width: 11px;
   height: 8px;
 }
-
