--- a/src/sass/components/_tools.scss
+++ b/src/sass/components/_tools.scss
@@ -6,17 +6,33 @@
   background-repeat: no-repeat;
 }
 
+.tools__title {
+  max-width: 462px;
+  margin: auto;
+  text-align: center;
+  margin-bottom: 70px;
+}
+
+.tools__button {
+  margin-top: 60px;
+  text-align: center;
+  @include media-mobile {
+    margin-top: 0;
+  }
+}
+
+//Tool Block
 .tool-container {
   @include media-tablet {
     flex-wrap: wrap;
     >.tool {
       flex-basis: 43%;
-      margin-bottom: 47px;
     }
   }
   @include media-mobile {
     >.tool {
       flex-basis: 100%;
+      margin-bottom: 47px;
     }
   }
 }
@@ -27,22 +43,6 @@
   }
 }
 
-.tools__title {
-  max-width: 475px;
-  margin: auto;
-  text-align: center;
-  margin-bottom: 70px;
-}
-
-.tools__button {
-  margin-top: 60px;
-  text-align: center;
-  @include media-tablet {
-    margin-top: 0;
-  }
-}
-
-// Tool
 .tool__icon {
   margin-bottom: 30px;
 }
@@ -50,4 +50,3 @@
 .tool__title {
   margin: 0 0 16px;
 }
-
