--- a/src/sass/layouts/_columns.scss
+++ b/src/sass/layouts/_columns.scss
@@ -1,11 +1,16 @@
 .layout-4-column {
-  @include columns(21%);
+  @include columns($width: 21%);
 }
 
 .layout-3-column {
-  @include columns(30%);
+  @include columns($width: 30%);
+  &:after {
+    content: '';
+    width: 30%;
+    display: block;
+  }
 }
 
 .layout-2-column {
-  @include columns(48%);
+  @include columns($width: 48%);
 }
