--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -417,7 +417,7 @@ ul {
   box-sizing: border-box;
 }
 
-.navigation__link, .footer-navigation__links a, .logo-path {
+.navigation__link, .footer-navigation__links a, .logo-path, .button {
   transition: all 0.3s ease-out;
 }
 
@@ -427,6 +427,17 @@ ul {
 
 .promo__text, .footer-navigation__links, .link-button, h1 {
   font-family: "Poppins", Verdana, sans-serif;
+}
+
+.modal::-webkit-scrollbar {
+  width: 5px;
+}
+.modal::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 1px grey;
+}
+.modal::-webkit-scrollbar-thumb {
+  background: #7752BE;
+  border-radius: 10px;
 }
 
 html {
@@ -495,7 +506,7 @@ h4 {
   h4 {
     font-size: 2rem;
     font-style: normal;
-    font-weight: 600;
+    font-weight: bold;
     line-height: 3rem;
   }
 }
@@ -514,16 +525,17 @@ h5 {
 
 .button {
   padding: 11px 25px 13px;
-  font-weight: 600;
   font-size: 1.6rem;
+  font-style: normal;
+  font-weight: 600;
   line-height: 2.2rem;
   border-radius: 4px;
   cursor: pointer;
-  transition: all 0.3s;
 }
 .button_bordered {
   background: #FFFFFF;
-  border: 1px solid #BCD0E5;
+  border: 1px solid #D7D7D7;
+  color: #544837;
 }
 .button_bordered:hover {
   background: #BCD0E5;
@@ -540,9 +552,16 @@ h5 {
 }
 
 .link-button {
+  color: #FF9900;
   display: inline-flex;
   align-items: center;
-  color: #FF9900;
+  transition: 0.3s;
+}
+.link-button:hover {
+  color: #F03E3D;
+}
+.link-button:hover .ico_play {
+  background-image: url("../img/icons/play-hover.svg");
 }
 
 .link-button__text {
@@ -571,12 +590,12 @@ h5 {
 }
 
 .icon-square {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
   width: 50px;
   height: 50px;
   border-radius: 19px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
 }
 .icon-square_yellow {
   background-color: #FAB005;
@@ -584,11 +603,23 @@ h5 {
 .icon-square_red {
   background-color: #F03E3D;
 }
+.icon-square_blue {
+  background-color: #4DADF7;
+}
 .icon-square_violet {
   background-color: #7752BE;
 }
-.icon-square_blue {
-  background-color: #4DADF7;
+
+.icon-round {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+.icon-round_white {
+  background-color: #FFFFFF;
 }
 
 .ico_play {
@@ -621,18 +652,6 @@ h5 {
   height: 17px;
 }
 
-.icon-round {
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-}
-.icon-round_white {
-  background-color: #FFFFFF;
-}
-
 .ico_phone {
   background-image: url("../img/icons/phone.svg");
   width: 13px;
@@ -653,8 +672,9 @@ h5 {
 }
 
 .tag {
-  padding: 0 14px;
   border-radius: 90px;
+  padding: 0 14px;
+  cursor: pointer;
   font-size: 1.3rem;
   font-style: normal;
   font-weight: normal;
@@ -675,10 +695,10 @@ h5 {
   content: "";
   display: inline-block;
   position: absolute;
-  background: #173A56;
+  background-color: #173A56;
   border-radius: 5px;
-  height: 3px;
   width: 100%;
+  height: 3px;
 }
 
 .hamburger {
@@ -686,7 +706,6 @@ h5 {
   position: relative;
   width: 31px;
   height: 25px;
-  margin-right: 37px;
 }
 @media (max-width: 768px) {
   .hamburger {
@@ -703,8 +722,45 @@ h5 {
 }
 
 .hamburger__line {
-  top: calc(50% - 1.5px);
+  top: calc( 50% - 1.5px );
   left: 0;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(80, 80, 80, 0.4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal {
+  position: relative;
+  border-radius: 10px;
+  background-color: #FFFFFF;
+  width: 675px;
+  min-height: 120px;
+  max-height: 90%;
+  overflow: auto;
+}
+@media (max-width: 768px) {
+  .modal {
+    width: 90%;
+  }
+}
+
+.modal__close-icon {
+  position: absolute;
+  top: 30px;
+  right: 26px;
+  cursor: pointer;
+}
+.modal__close-icon svg {
+  pointer-events: none;
 }
 
 .wrapper {
@@ -742,6 +798,23 @@ h5 {
 .header__logo-line {
   display: flex;
 }
+@media (max-width: 414px) {
+  .header__logo-line {
+    justify-content: center;
+    flex-grow: 1;
+    position: relative;
+  }
+}
+
+.header__hamburger {
+  margin-right: 37px;
+}
+@media (max-width: 414px) {
+  .header__hamburger {
+    position: absolute;
+    left: 0;
+  }
+}
 
 .header__buttons > .button {
   margin-left: 14px;
@@ -773,6 +846,11 @@ h5 {
 .layout-3-column > * {
   flex-basis: 30%;
 }
+.layout-3-column:after {
+  content: "";
+  width: 30%;
+  display: block;
+}
 
 .layout-2-column {
   display: flex;
@@ -788,7 +866,7 @@ h5 {
 }
 @media (max-width: 414px) {
   .footer {
-    padding: 30px 0;
+    padding: 31px 0;
   }
 }
 
@@ -823,11 +901,11 @@ h5 {
 
 .footer-navigation__links a {
   color: #544837;
-  text-decoration: none;
   font-size: 1.6rem;
   font-style: normal;
   font-weight: normal;
   line-height: 3.5rem;
+  text-decoration: none;
 }
 .footer-navigation__links a:hover {
   color: #FF9900;
@@ -876,6 +954,11 @@ h5 {
   font-weight: normal;
   line-height: 2.6rem;
 }
+@media (max-width: 768px) {
+  .contact-us__link {
+    justify-content: center;
+  }
+}
 .contact-us__link a {
   margin-left: 11px;
   color: #544837;
@@ -883,11 +966,6 @@ h5 {
 }
 .contact-us__link:hover a {
   text-decoration: underline;
-}
-@media (max-width: 768px) {
-  .contact-us__link {
-    justify-content: center;
-  }
 }
 
 .contact-us__form input, .contact-us__form textarea {
@@ -962,6 +1040,29 @@ h5 {
   margin: 0 0 30px;
 }
 
+.promo__buttons {
+  display: flex;
+  align-items: center;
+}
+.promo__buttons > * {
+  margin-right: 44px;
+}
+.promo__buttons > *:last-child {
+  margin-right: 0;
+}
+@media (max-width: 414px) {
+  .promo__buttons {
+    flex-direction: column;
+  }
+  .promo__buttons > * {
+    margin-right: 0;
+    margin-bottom: 26px;
+  }
+  .promo__buttons > *:last-child {
+    margin-bottom: 0;
+  }
+}
+
 .promo__text {
   max-width: 487px;
   margin: 0 0 45px;
@@ -981,29 +1082,6 @@ h5 {
   }
 }
 
-.promo__buttons {
-  display: flex;
-  align-items: center;
-}
-.promo__buttons > * {
-  margin-right: 44px;
-}
-.promo__buttons > *:last-child {
-  margin-right: 0;
-}
-@media (max-width: 414px) {
-  .promo__buttons {
-    flex-direction: column;
-  }
-  .promo__buttons > * {
-    margin-right: 0px;
-    margin-bottom: 26px;
-  }
-  .promo__buttons > *:last-child {
-    margin-bottom: 0;
-  }
-}
-
 @media (max-width: 414px) {
   .promo__image {
     max-width: 100%;
@@ -1019,7 +1097,7 @@ h5 {
 
 .navigation__link {
   list-style: none;
-  padding: 0 15px;
+  padding: 0 10px;
   cursor: pointer;
 }
 .navigation__link:hover {
@@ -1040,29 +1118,8 @@ h5 {
   background-repeat: no-repeat;
 }
 
-@media (max-width: 768px) {
-  .tool-container {
-    flex-wrap: wrap;
-  }
-  .tool-container > .tool {
-    flex-basis: 43%;
-    margin-bottom: 47px;
-  }
-}
-@media (max-width: 414px) {
-  .tool-container > .tool {
-    flex-basis: 100%;
-  }
-}
-
-@media (max-width: 768px) {
-  .tool {
-    text-align: center;
-  }
-}
-
 .tools__title {
-  max-width: 475px;
+  max-width: 462px;
   margin: auto;
   text-align: center;
   margin-bottom: 70px;
@@ -1072,9 +1129,30 @@ h5 {
   margin-top: 60px;
   text-align: center;
 }
-@media (max-width: 768px) {
+@media (max-width: 414px) {
   .tools__button {
     margin-top: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .tool-container {
+    flex-wrap: wrap;
+  }
+  .tool-container > .tool {
+    flex-basis: 43%;
+  }
+}
+@media (max-width: 414px) {
+  .tool-container > .tool {
+    flex-basis: 100%;
+    margin-bottom: 47px;
+  }
+}
+
+@media (max-width: 768px) {
+  .tool {
+    text-align: center;
   }
 }
 
@@ -1112,17 +1190,6 @@ h5 {
   }
 }
 
-.strategy {
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-}
-@media (max-width: 768px) {
-  .strategy {
-    overflow: hidden;
-  }
-}
-
 .strategy-wrapper > * {
   margin-bottom: 30px;
 }
@@ -1134,6 +1201,22 @@ h5 {
 @media (max-width: 414px) {
   .strategy-wrapper > * {
     flex-basis: 100%;
+  }
+}
+
+.strategy {
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.strategy_hidden {
+  display: none;
+}
+@media (max-width: 768px) {
+  .strategy {
+    overflow: hidden;
+    padding-top: 200px;
   }
 }
 
@@ -1150,6 +1233,35 @@ h5 {
   flex-grow: 1;
 }
 
+@media (max-width: 768px) {
+  .strategy__image {
+    position: absolute;
+    top: 0;
+  }
+}
+
+.article-modal__content .strategy__image {
+  width: 100%;
+}
+@media (max-width: 768px) {
+  .article-modal__content .strategy__image {
+    position: static;
+  }
+}
+.article-modal__content .strategy__date {
+  font-size: 1.3rem;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 1.3rem;
+  margin: 0 0 5px;
+}
+.article-modal__content .strategy__name {
+  margin-bottom: 10px;
+}
+.article-modal__content .strategy__text {
+  margin: 0 0 12px;
+}
+
 .about-us {
   padding: 30px 0 100px 0;
 }
@@ -1162,15 +1274,15 @@ h5 {
   margin: 0 0 45px;
 }
 
+.employee-container {
+  padding-right: 32px;
+}
+
 .employee {
   display: flex;
   padding: 35px;
   position: relative;
   width: calc(30% - $image-gap);
-}
-
-.employee-container {
-  padding-right: 32px;
 }
 
 .employee__name {
@@ -1202,8 +1314,8 @@ h5 {
   height: 98px;
   border-radius: 50%;
   position: absolute;
-  top: 20px;
   right: -32px;
+  top: 20px;
   box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.15);
 }
 
