add webpack and style

--- a/src/sass/components/_contact-us.scss
+++ b/src/sass/components/_contact-us.scss
@@ -20,7 +20,7 @@
   max-width: 520px;
   @include media-tablet {
     max-width: 100%;
-    margin-bottom: 52px;
+    margin-bottom: 20px;
   }
 }
 
@@ -32,9 +32,12 @@
   margin: 0 0 19px;
   display: flex;
   align-items: center;
-  @include font($size: 2.5rem, $height: 2.6rem, $weight: normal);
+  @include font($size: 2.4rem, $height: 2.5rem, $weight: normal);
   @include media-tablet {
     justify-content: center;
+  }
+  @include media-mobile {
+    @include font($size: 2.0rem, $height: 2.1rem, $weight: normal);
   }
   a {
     margin-left: 11px;
@@ -68,6 +71,13 @@
 
 .contact-us__line {
   margin-bottom: 19px;
+  @include media-bigtablet {
+    flex-direction: column;
+    margin-bottom: 0;
+    >* {
+      margin-bottom: 19px;
+    }
+  }
   @include media-mobile {
     flex-direction: column;
     margin-bottom: 0;
@@ -80,6 +90,9 @@
 .contact-us__button {
   >* {
     min-width: 117px;
+  }
+  @include media-bigtablet {
+    margin-top: 24px;
   }
   @include media-mobile {
     margin-top: 24px;
