--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -17,6 +17,7 @@ $color-red: #F03E3D;
 $color-blue: #4DADF7;
 
 $content-width: 1197px;
+$tablet-big-width: 1024px;
 $tablet-width: 768px;
 $mobile-big-width: 414px;
 $mobile-small-width: 320px;
