--- a/src/sass/abstract/_mixins.scss
+++ b/src/sass/abstract/_mixins.scss
@@ -22,6 +22,10 @@
   @media (max-width: $tablet-width) { @content; }
 }
 
+@mixin media-bigtablet {
+  @media (max-width: $tablet-big-width) { @content; }
+}
+
 @mixin media-mobile {
   @media (max-width: $mobile-big-width) { @content; }
 }
