--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -10,29 +10,35 @@ body {
 h1 {
   @extend %font-add;
   @include font($height: 5.4rem, $size: 4.4rem);
+  @include media-bigtablet {
+    @include font($height: 4.6rem, $size: 3.6rem);
+  }
   @include media-mobile {
-    @include font($height: 4.2rem, $size: 3.2rem);
+    @include font($height: 4.0rem, $size: 3.0rem);
   }
 }
 
 h2 {
   @include font($size: 3.4rem, $height: 4.6rem);
+  @include media-bigtablet {
+    @include font($height: 4.2rem, $size: 3.0rem);
+  }
   @include media-mobile {
     @include font($height: 3.3rem, $size: 2.4rem);
   }
 }
 
 h3 {
-  @include font($size: 2.4rem, $height: 3.4rem);
-  @include media-mobile {
-    @include font($height: 3.1rem, $size: 2.1rem);
+  @include font($size: 2.1rem, $height: 3.1rem);
+  @include media-bigtablet {
+    @include font($height: 3.0rem, $size: 2.0rem);
   }
 }
 
 h4 {
-  @include font($size: 2.2rem, $height: 3.0rem, $weight: 600);
-  @include media-tablet {
-    @include font($height: 3.0rem, $size: 2.0rem);
+  @include font($size: 2.0rem, $height: 2.8rem, $weight: 600);
+  @include media-bigtablet {
+    @include font($height: 2.8rem, $size: 1.8rem);
   }
 }
 
