--- a/src/sass/base/_tags.scss
+++ b/src/sass/base/_tags.scss
@@ -13,6 +13,7 @@
   &_selected {
     background-color: $color-primary;
     color: $color-light;
+    border: 1px solid $color-primary;
   }
 
   &_bordered {
