--- a/src/sass/components/_promo.scss
+++ b/src/sass/components/_promo.scss
@@ -7,6 +7,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 70px;
+  @include media-tablet {
+    margin-top: 50px;
+  }
   @include media-mobile {
     flex-direction: column-reverse;
   }
@@ -14,7 +18,7 @@
 
 .promo__content {
   padding-right: 65px;
-  @include media-tablet {
+  @include media-bigtablet {
     padding-right: 0;
   }
   @include media-mobile {
@@ -52,7 +56,7 @@
   margin: 0 0 45px;
   @extend %font-add;
   @include font($size: 1.8rem, $height: 2.8rem, $weight: normal);
-  @include media-tablet {
+  @include media-bigtablet {
     width: 380px;
   }
   @include media-mobile {
