--- a/src/sass/components/_tools.scss
+++ b/src/sass/components/_tools.scss
@@ -7,7 +7,7 @@
 }
 
 .tools__title {
-  max-width: 462px;
+  max-width: 475px;
   margin: auto;
   text-align: center;
   margin-bottom: 70px;
@@ -16,6 +16,9 @@
 .tools__button {
   margin-top: 60px;
   text-align: center;
+  @include media-bigtablet {
+    margin-top: 40px;
+  }
   @include media-mobile {
     margin-top: 0;
   }
@@ -23,6 +26,12 @@
 
 //Tool Block
 .tool-container {
+  @include media-bigtablet {
+    flex-wrap: wrap;
+    >.tool {
+      flex-basis: 24%;
+    }
+  }
   @include media-tablet {
     flex-wrap: wrap;
     >.tool {
