--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -2,6 +2,9 @@
   background: $color-light;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
   padding: 15px 0 17px 0;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
 
 .header__wrapper {
