--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -457,12 +457,20 @@ h1 {
   font-weight: bold;
   line-height: 5.4rem;
 }
-@media (max-width: 414px) {
+@media (max-width: 1024px) {
   h1 {
-    font-size: 3.2rem;
+    font-size: 3.6rem;
     font-style: normal;
     font-weight: bold;
-    line-height: 4.2rem;
+    line-height: 4.6rem;
+  }
+}
+@media (max-width: 414px) {
+  h1 {
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 4rem;
   }
 }
 
@@ -471,6 +479,14 @@ h2 {
   font-style: normal;
   font-weight: bold;
   line-height: 4.6rem;
+}
+@media (max-width: 1024px) {
+  h2 {
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 4.2rem;
+  }
 }
 @media (max-width: 414px) {
   h2 {
@@ -482,32 +498,32 @@ h2 {
 }
 
 h3 {
-  font-size: 2.4rem;
+  font-size: 2.1rem;
   font-style: normal;
   font-weight: bold;
-  line-height: 3.4rem;
+  line-height: 3.1rem;
 }
-@media (max-width: 414px) {
+@media (max-width: 1024px) {
   h3 {
-    font-size: 2.1rem;
-    font-style: normal;
-    font-weight: bold;
-    line-height: 3.1rem;
-  }
-}
-
-h4 {
-  font-size: 2.2rem;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 3rem;
-}
-@media (max-width: 768px) {
-  h4 {
     font-size: 2rem;
     font-style: normal;
     font-weight: bold;
     line-height: 3rem;
+  }
+}
+
+h4 {
+  font-size: 2rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 2.8rem;
+}
+@media (max-width: 1024px) {
+  h4 {
+    font-size: 1.8rem;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 2.8rem;
   }
 }
 
@@ -683,6 +699,7 @@ h5 {
 .tag_selected {
   background-color: #FF9900;
   color: #FFFFFF;
+  border: 1px solid #FF9900;
 }
 .tag_bordered {
   border: 1px solid #D7D7D7;
@@ -782,6 +799,9 @@ h5 {
   background: #FFFFFF;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
   padding: 15px 0 17px 0;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
 
 .header__wrapper {
@@ -937,7 +957,7 @@ h5 {
 @media (max-width: 768px) {
   .contact-us__content {
     max-width: 100%;
-    margin-bottom: 52px;
+    margin-bottom: 20px;
   }
 }
 
@@ -949,14 +969,22 @@ h5 {
   margin: 0 0 19px;
   display: flex;
   align-items: center;
-  font-size: 2.5rem;
+  font-size: 2.4rem;
   font-style: normal;
   font-weight: normal;
-  line-height: 2.6rem;
+  line-height: 2.5rem;
 }
 @media (max-width: 768px) {
   .contact-us__link {
     justify-content: center;
+  }
+}
+@media (max-width: 414px) {
+  .contact-us__link {
+    font-size: 2rem;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 2.1rem;
   }
 }
 .contact-us__link a {
@@ -987,6 +1015,15 @@ h5 {
 .contact-us__line {
   margin-bottom: 19px;
 }
+@media (max-width: 1024px) {
+  .contact-us__line {
+    flex-direction: column;
+    margin-bottom: 0;
+  }
+  .contact-us__line > * {
+    margin-bottom: 19px;
+  }
+}
 @media (max-width: 414px) {
   .contact-us__line {
     flex-direction: column;
@@ -999,6 +1036,11 @@ h5 {
 
 .contact-us__button > * {
   min-width: 117px;
+}
+@media (max-width: 1024px) {
+  .contact-us__button {
+    margin-top: 24px;
+  }
 }
 @media (max-width: 414px) {
   .contact-us__button {
@@ -1015,6 +1057,12 @@ h5 {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 70px;
+}
+@media (max-width: 768px) {
+  .promo__wrapper {
+    margin-top: 50px;
+  }
 }
 @media (max-width: 414px) {
   .promo__wrapper {
@@ -1025,7 +1073,7 @@ h5 {
 .promo__content {
   padding-right: 65px;
 }
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .promo__content {
     padding-right: 0;
   }
@@ -1071,7 +1119,7 @@ h5 {
   font-weight: normal;
   line-height: 2.8rem;
 }
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .promo__text {
     width: 380px;
   }
@@ -1119,7 +1167,7 @@ h5 {
 }
 
 .tools__title {
-  max-width: 462px;
+  max-width: 475px;
   margin: auto;
   text-align: center;
   margin-bottom: 70px;
@@ -1129,12 +1177,25 @@ h5 {
   margin-top: 60px;
   text-align: center;
 }
+@media (max-width: 1024px) {
+  .tools__button {
+    margin-top: 40px;
+  }
+}
 @media (max-width: 414px) {
   .tools__button {
     margin-top: 0;
   }
 }
 
+@media (max-width: 1024px) {
+  .tool-container {
+    flex-wrap: wrap;
+  }
+  .tool-container > .tool {
+    flex-basis: 24%;
+  }
+}
 @media (max-width: 768px) {
   .tool-container {
     flex-wrap: wrap;
@@ -1193,7 +1254,7 @@ h5 {
 .strategy-wrapper > * {
   margin-bottom: 30px;
 }
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .strategy-wrapper > * {
     flex-basis: 48%;
   }
@@ -1213,10 +1274,9 @@ h5 {
 .strategy_hidden {
   display: none;
 }
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .strategy {
     overflow: hidden;
-    padding-top: 200px;
   }
 }
 
@@ -1233,17 +1293,17 @@ h5 {
   flex-grow: 1;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .strategy__image {
-    position: absolute;
-    top: 0;
+    position: static;
+    width: 100%;
   }
 }
 
 .article-modal__content .strategy__image {
   width: 100%;
 }
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .article-modal__content .strategy__image {
     position: static;
   }
