--- a/src/sass/components/_about-us.scss
+++ b/src/sass/components/_about-us.scss
@@ -14,6 +14,11 @@ $image-gap: 32px;
 
 .employee-container {
   padding-right: $image-gap;
+  @include media-bigtablet {
+    width: 1197px;
+    overflow: hidden;
+    transform: translate3d(-12%, 0px, 0px);
+  }
 }
 
 .employee {
@@ -21,6 +26,14 @@ $image-gap: 32px;
   padding: 35px;
   position: relative;
   width: calc(30% - $image-gap);
+  transform: scale3d(1, 1, 1);
+  &_selected {
+    @include media-bigtablet {
+      opacity: 0.6;
+      transform: scale3d(0.8, 0.8, 1);
+      transition: all 0.3s ease-in-out;
+    }
+  }
 }
 
 .employee__name {
