--- a/src/sass/base/_modal.scss
+++ b/src/sass/base/_modal.scss
@@ -12,7 +12,7 @@
 
 .modal {
   position: relative;
-  border-radius: 10px;
+  border-radius: 20px;
   background-color: $color-light;
   width: 675px;
   min-height: 120px;
@@ -20,7 +20,8 @@
   overflow: auto;
   @extend %custom-scroll;
   @include media-tablet {
-    width: 90%;
+    width: 80%;
+    margin-top: 130px;
   }
 }
 
